# coursera

./: Codebook.md  README.md  assignment.html  ex.Rmd  ex.html  index.html  index.md  run_Analysis.R  second.txt  slide-rpubs.html  slide.Rpres
courses/Advanced Linear Models for Data Science 1 - Least Squares (JHU 2018)/: test.R
courses/Algorithms - Design and Analysis - Part I (Stanford 2012)/: ex.cpp
courses/Algorithms - I (Princeton 2012)/: Board.java  Deque.java  Fast.java  KdTree.java  Percolation.java  Puzzle.java  Solver.java  kdtree.py
courses/Approximation Algorithm - Part I (ENS 2015)/: exercise1.Rmd  exercise2.Rmd  exercise3.Rmd  exercise4.Rmd  exercise5.Rmd
courses/Approximation Algorithm - Part II (ENS 2016)/: lp.R  lp.py
courses/Bayesian Statistics (Duke 2022)/: test.R
courses/Bayesian Statistics (UCSC 2016)/: test.R
courses/Calculus through data modeling (JHU 2022)/: test.R
courses/Combinatorics and Probability (UCSD 2022)/: codes.py
courses/Cryptography - I (Stanford 2012)/: ex.cpp  hw.py  hw3_4.py  hw5.py  hw5_1.py  numbthy.py  oracle.py
courses/Data Analysis R Programmming (Google 2022)/: test.R
courses/Data Science Math Skills (Duke 2017)/: ex.R
courses/Digital Signal Processing 1 - Basic Concepts and Algorithms (EPFL 2022)/: test.R
courses/Inferential Statistics (Amsterdam 2017)/: test.R
courses/Specialization - Data Mining (UIUC 2015)/Text Mining and Analytics/PA/Assignment/tools/: CMakeLists.txt  association.cpp  competition.cpp  plsa.cpp
project1/: Readme.md  plot1.R  plot4.R
shinyProject/: project.Rmd
(+2168 files in other folders)
